--- a/portfolio.html
+++ b/portfolio.html
@@ -3,6 +3,6 @@ layout: default
 title: Portfolio
 ---
 
-<h1>Portfolio</h1>
+<h1>{{ page.title }}</h1>
 
 {% for post in site.posts offset:0 %} {% include post.html %} {% endfor%}
