--- a/index.html
+++ b/index.html
@@ -3,5 +3,5 @@ layout: home
 title: Homepage
 ---
 
-{% for post in site.posts offset:0 limit:3 %} {% include post.html %} {%
-endfor%}
+{% for post in site.posts offset:0 limit:3 %} {% include post.html %} {% endfor
+%}
