--- a/_posts/2017-05-25-bet.html
+++ b/_posts/2017-05-25-bet.html
@@ -6,10 +6,10 @@ image: /assets/images/portfolio/BET/BETThumb.png
 ---
 
 <p>
-  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Recusandae assumenda
-  distinctio laboriosam inventore. Quod culpa tempora repudiandae cupiditate
-  est? Soluta placeat tempore ipsam magni tempora labore maxime incidunt vitae
-  delectus.
+  “I want to be able to learn more about a movie, to immerse myself in these
+  stories and the artists who brought them to life. These materials exist and
+  are put out on disc releases, so why can’t I enjoy them on streaming
+  platforms?”
 </p>
 
 <img src="/assets/images/portfolio/BET/BET1.png" alt="" />
