--- a/portfolio.html
+++ b/portfolio.html
@@ -5,4 +5,6 @@ title: Portfolio
 
 <h1>{{ page.title }}</h1>
 
-{% for post in site.posts offset:0 %} {% include post.html %} {% endfor%}
+<section class="portfolio">
+  {% for post in site.posts offset:0 %} {% include post.html %} {% endfor%}
+</section>
