--- a/_posts/2017-05-26-aka-how-can-i-help-you.html
+++ b/_posts/2017-05-26-aka-how-can-i-help-you.html
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "AKA: Hown Can I Help You?"
+title: "AKA: How Can I Help You?"
 date: 2017-05-26 15:05:55 +0300
 image: /assets/images/portfolio/AKA/AKAThumb.png
 ---
