--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@ title: Homepage
 ---
 
 <section class="portfolio">
-  {% for post in site.posts offset:0 limit:3 %}
-    {% include post.html %}
-  {% endfor %}
-  <div>
+  {% for post in site.posts offset:0 limit:3 %} {% include post.html %} {%
+  endfor %}
+  <div class="portfolio_end">
     <h3>See More Projects</h3>
-    <button><a href="/portfolio">Portfolio</button>
+    <a class="card_link" href="/portfolio">Portfolio</a>
   </div>
 </section>
