About and Contacts page

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@ title: Homepage
 <section class="portfolio">
   {% for post in site.posts offset:0 limit:3 %} {% include post.html %} {%
   endfor %}
-  <div class="portfolio_end">
-    <h3>See More Projects</h3>
+  <div class="text_wrapper">
+    <h2>See More Projects</h2>
     <a class="card_link" href="/portfolio">Portfolio</a>
   </div>
 </section>
