--- a/contact.html
+++ b/contact.html
@@ -2,10 +2,11 @@
 layout: default
 title: Contact
 ---
-<img src="/assets/images/contact.jpg" alt="" />
-<div>
-  <h1>Let's Connect!</h1>
-  <div>
+
+<section class="hero">
+  <img class="contact_img" src="/assets/images/contact.jpg" alt="" />
+  <div class="text_wrapper">
+    <h1>Let's Connect!</h1>
     <ul>
       {% for link in site.data.settings.social %}
       <li>
@@ -16,36 +17,35 @@ title: Contact
       </li>
       {% endfor %}
     </ul>
+    <div>
+      <h2>Contact Form</h4>
+      <form>
+        <label>Full Name
+          <input 
+            type="text"
+            id="name"
+            name="name"
+            placeholder="Full Name"
+          />
+        </label>
+        <label>
+          Email
+          <input
+            type="email"
+            id="email"
+            name="_replyto"
+            placeholder="Email Address"
+          />
+        </label>
+        <label>
+          Write your message...
+          <textarea
+            name="message"
+            id="message"
+            placeholder="Type Message Here"
+            ></textarea>
+        </label>
+        <button type="submit">Send Submission</button>
+      </form>
   </div>
-  <div>
-    <h2>Contact Form</h4>
-    <form>
-      <label>Full Name
-        <input 
-          type="text"
-          id="name"
-          name="name"
-          placeholder="Full Name"
-        />
-      </label>
-      <label>
-        Email
-        <input
-          type="email"
-          id="email"
-          name="_replyto"
-          placeholder="Email Address"
-        />
-      </label>
-      <label>
-        Write your message...
-        <textarea
-          name="message"
-          id="message"
-          placeholder="Type Message Here"
-          ></textarea>
-      </label>
-          <button type="submit">Send Submission</button>
-        </div>
-    </form>
-</div>
+</section>
