--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title: Homepage
 <section class="portfolio">
   {% for post in site.posts offset:0 limit:3 %} {% include post.html %} {%
   endfor %}
-  <div class="text_wrapper">
+  <div class="more_projects">
     <h2>See More Projects</h2>
     <a class="card_link" href="/portfolio">Portfolio</a>
   </div>
