--- a/about.html
+++ b/about.html
@@ -34,6 +34,6 @@ title: About
     </div>
   </div>
   <div class="image_wrapper">
-    <img src="/assets/images/about2.JPG" alt="" />
+    <img src="/assets/images/about.JPG" alt="Portrait of me, in a party" />
   </div>
 </section>
