--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@ title: Contact
       <ul>
         {% for link in site.data.settings.social %}
         <li class="socials">
-          <img class='svg' src='/assets/images/{{ link.svg }}' />
+          <img class='svg' src='/assets/images/{{ link.svg }}' alt='Social media logo'/>
           <a href="{{ link.link }}"
             >{{ link.username }}</a
           >
