--- a/portfolio.html
+++ b/portfolio.html
@@ -3,8 +3,9 @@ layout: default
 title: Portfolio
 ---
 
-<h1>{{ page.title }}</h1>
-
-<section class="portfolio">
-  {% for post in site.posts offset:0 %} {% include post.html %} {% endfor%}
+<section>
+  <h1 class="portfolio_heading">{{ page.title }}</h1>
+  <div class="portfolio">
+    {% for post in site.posts offset:0 %} {% include post.html %} {% endfor%}
+  </div>
 </section>
